--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Ubuntu|Courgette);
+@import url('https://fonts.googleapis.com/css?family=Ubuntu|Courgette');
 @font-face {
   font-family: 'entypo';
   font-style: normal;
