指1本版があった。

--- a/css/style.css
+++ b/css/style.css
@@ -502,4 +502,8 @@ ul {
     position: absolute;
     width: 100% ;
     height: 100%;
+    background-size: cover;
+
+    /* 背景画像が読み込まれる前に表示される背景のカラー */
+    background-color: #464646;
 }
