--- a/css/help_style.css
+++ b/css/help_style.css
@@ -20,6 +20,25 @@ body {
     width:100%;
     font-family: 'Raleway', sans-serif;
 }
+
+.profile_title {
+    text-align: center;
+    font-size: 30px;
+}
+
+.youtube {
+  position: relative;
+  width: 80%;
+  padding-top: 56.25%;
+}
+.youtube iframe {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
+
 .preloader {
     position: fixed;
     top: 0;
@@ -171,7 +190,7 @@ h2 {
 }
 h3 {
     font-size:1.375rem;
-    line-height: 2.5rem;  
+    line-height: 2.5rem;
     text-transform: uppercase;
 }
 h4 {
@@ -536,9 +555,9 @@ input::-ms-input-placeholder {
     padding-top: 0px;
     padding-bottom: 0px;
     position: fixed;
-    top: 0; 
-    left: 0; 
-    right: 0; 
+    top: 0;
+    left: 0;
+    right: 0;
     z-index: 300;
     box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
@@ -556,8 +575,8 @@ input::-ms-input-placeholder {
     background-color: transparent;
 }
 .main_menu_bg .navbar-default {
-    background-color: transparent; 
-    border-color: transparent; 
+    background-color: transparent;
+    border-color: transparent;
     transition: all .6s;
     margin: 15px auto;
 }
@@ -605,12 +624,12 @@ input::-ms-input-placeholder {
     list-style: none;
     background-color: transparent;
     -webkit-background-clip: padding-box;
-    background-clip: padding-box; 
-    border: 0px solid #ccc; 
-    border: 0px solid rgba(0,0,0,.15); 
-    border-radius: 0px; 
-    -webkit-box-shadow: 0 0px 0px rgba(0,0,0,.175); 
-    box-shadow: 0 0px 0px 
+    background-clip: padding-box;
+    border: 0px solid #ccc;
+    border: 0px solid rgba(0,0,0,.15);
+    border-radius: 0px;
+    -webkit-box-shadow: 0 0px 0px rgba(0,0,0,.175);
+    box-shadow: 0 0px 0px
 }
 
 .dropdown-menu .navbar-form .form-group input[type="text"]{
@@ -621,7 +640,7 @@ input::-ms-input-placeholder {
 }
 .dropdown-menu .navbar-form .form-group .form-control::-webkit-input-placeholder{
     color: #ff7200;
-    opacity: 1; 
+    opacity: 1;
 }
 .dropdown-menu .navbar-form {
     margin-right: -30px;
@@ -841,7 +860,7 @@ input::-ms-input-placeholder {
     margin-bottom:10px;
 }
 
-/*about_skill_area*/ 
+/*about_skill_area*/
 .about_skill_area{
     margin-top:75px;
 }
@@ -981,12 +1000,12 @@ input::-ms-input-placeholder {
     width:64px;
     height:65px;
     line-height: 65px;
-    text-align: center;  
+    text-align: center;
     margin-right: 10px;
-    transition: 0.6s; 
+    transition: 0.6s;
 }
 .othersservice .single_othersservice:hover .single_othersservice_icon h4 i{
-    background: url(../images/iconbgh2.png) no-repeat center center; 
+    background: url(../images/iconbgh2.png) no-repeat center center;
     color:#fff;
 }
 .othersservice .single_othersservice .single_othersservice_content{
@@ -1143,9 +1162,9 @@ button.btn-md:hover {
 .portfolio .toolbar{
     margin-bottom:50px;
 }
-#portfoliowork {  
+#portfoliowork {
     margin: 1rem 0;
-    -webkit-column-count: 3; 
+    -webkit-column-count: 3;
     -moz-column-count: 3;
     column-count: 3;
     -webkit-column-gap: 1rem;
@@ -1155,7 +1174,7 @@ button.btn-md:hover {
     -moz-column-width: 33.33333333333333%;
     column-width: 33.33333333333333%;
 }
-.tile { 
+.tile {
     display: none;
 
 }
@@ -1163,13 +1182,13 @@ button.btn-md:hover {
 
 .scale-anm {
     margin: 0 0 1.125rem;
-    width: 100%; 
+    width: 100%;
 }
 
 
 .tile img {
     height: auto;
-    display: block; 
+    display: block;
     width: 100%;
 }
 
@@ -1204,7 +1223,7 @@ button.btn-md:hover {
 }
 /*.grid_item_overlay h4{
     margin-bottom:0;
-    margin-top:40px;  
+    margin-top:40px;
 }
 .grid_item_overlay p{
 
@@ -1237,9 +1256,9 @@ button.btn-md:hover {
     display: inline-block;
     line-height: normal;
     padding: .5rem 1rem;
-    margin: 0; 
+    margin: 0;
     height: auto;
-    border: 1px solid #ccc; 
+    border: 1px solid #ccc;
     vertical-align: middle;
     -webkit-appearance: none;
     color: #555;
@@ -1270,8 +1289,8 @@ button.btn-md:hover {
 
 .grid{}
 
-.grid-item { 
-    width: 23%; 
+.grid-item {
+    width: 23%;
 }
 .grid-item--width2{
     width:45%;
@@ -1428,7 +1447,7 @@ button.btn-md:hover {
 }
 
 #map_canvas{
-    height: 160px; 
+    height: 160px;
     width: 100%;
 }
 
@@ -1444,7 +1463,7 @@ button.btn-md:hover {
     background-size: cover;
 }
 .footer_widget .main_widget{
-    padding: 55px 15px 80px 15px; 
+    padding: 55px 15px 80px 15px;
     overflow: hidden;
 }
 .single_widget{
@@ -1602,11 +1621,3 @@ button.btn-md:hover {
     text-decoration: none;
 
 }
-
-
-
-
-
-
-
-
