--- a/css/map_style.css
+++ b/css/map_style.css
@@ -1,15 +1,30 @@
-html, body {
+/* html, body {
         height: 100%;
         margin: 0;
         padding: 0;
-      }
+      } */
+
+
+  html {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    height: 100%;
+    margin: 0;
+}
+
+ .fullheight {
+    height: 100%;
+}
 
 #gmap_wrapper {
 width:100%;
-padding-top:50%;
+/* padding-top:50%; */
 position: relative;
 margin:auto;
-    height: 100%;
+  height: 96%;
 }
 
 #map_canvas{
@@ -17,13 +32,13 @@ margin:auto;
     width: 100%;
     height: 100%;
     top: 0;
-    margin-top: 1%;
+    /* margin-top: 1%; */
 }
 
 
 @media screen and (max-width: 480px){
     iframe{
-    width: 280px;
+    width: 290px;
     height: 170px;
 }
 }
