set fontawsome for popup

--- a/css/modal.css
+++ b/css/modal.css
@@ -1,19 +1,162 @@
-.wrapper {
-    position: relative;
-    width: 100%;
+.popupModal1 {
+  height: 5%;
 }
 
-.wrapper:before {
-    content:"";
-    display: block;
-    padding-top: 56.25%; /* 高さと幅の比を16:9に固定。9/16*100=56.25 */
+.popupModal1 > input { /* ラジオボックス非表示 */
+    display: none;
 }
-.modalContent {
-    position: absolute;
-    top: 30%;
-    bottom: 30%;
-    left: 0;
+.popupModal1 > input:nth-child(1) + label {
+    cursor: pointer;
+    display: block;
+    text-align: center;
+}
+
+.fas fa-bars fa-lg {
+  background-color: red;
+}
+
+.modalPopup2 { /* 初期設定 ポップアップ非表示 */
+    display: none;
+}
+
+.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 {/* ラジオ１ チェックでポップアップ表示 */
+    display: block;
+    z-index: 998;
+    position: fixed;
+    width: 90%;
+    /* height: 80%; */
+    height: 340px;
+    border-radius: 20px;
+    left: 50%;
+    top: 50%;
+    margin-top: 10px;
+    -webkit-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    transition-duration: 1s;
+    background: #fff;
+    padding: 10px 20px;
+    overflow: hidden;
+}
+
+
+@media (min-width: 768px) {/* PCのときはページの真ん中の600x600領域 */
+.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2{
+         width: 600px;
+         height: 55%;
+         padding: 30px;
+        border-radius: 20px;
+    }
+.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label {
+     left: 50% !important;
+     top: 50% !important;
+     margin-left: 270px !important;
+     margin-top: -310px !important;
+}
+}
+
+.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div {/* */
+    overflow:auto;
+    -webkit-overflow-scrolling:touch;
+    display: inline-block;
     width: 100%;
     height: 100%;
 }
+.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div > iframe {
+    width: 100%;
+      height:100%;
+      border:none;
+      display:block;
+}
 
+.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label + .modalPopup2 > div > img {/* ポップアップの中の要素 */
+max-width: 100%;
+}
+.popupModal1 > input:nth-child(1) + label ~ label {
+    display: none;/* ラジオ１ 以外のラベルを初期は非表示 */
+
+}
+.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label {
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.70);
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 997;
+    text-indent: -999999px;
+    overflow: hidden;
+}
+.popupModal1 > input:nth-child(1):checked + label + input:nth-child(3) + label + input:nth-child(5) + label {
+    background: rgba(255, 255, 255, 0.5);
+    display: inline-block;
+    position: fixed;
+    left: 10px;
+    bottom: 50px;
+    z-index: 999;
+    width: 44pt;
+    height: 44pt;
+    font-size: 40px;
+    border-radius: 50%;
+    line-height: 44pt;
+    text-align: center;
+    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.2);
+}
+
+.popupModal1 > input:nth-child(1) + label + input:nth-child(3):checked + label + input:nth-child(5) + label + .modalPopup2,
+.popupModal1 > input:nth-child(1) + label + input:nth-child(3) + label + input:nth-child(5):checked + label + .modalPopup2 { /* ラジオ２と３ どっちかチェックでポップアップ非表示 */
+    display: none;
+}
+
+
+.modalPopup2 {
+    animation: fadeIn 1s ease 0s 1 normal;
+    -webkit-animation: fadeIn 1s ease 0s 1 normal;
+}
+
+.modalPopup3 {
+  text-align: center;
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0}
+    100% {opacity: 1}
+}
+
+@-webkit-keyframes fadeIn {
+    0% {opacity: 0}
+    100% {opacity: 1}
+}
+
+.popupModal1 .modalTitle {
+     padding-bottom: .5em;
+     margin: .5em 0;
+     1px solid #ccc;
+     font-weight: bold;
+     font-size: 20px;
+}
+.popupModal1 .modalMain {
+     color:#222;
+     text-align: left;
+     font-size: 14px;
+     line-height: 1.8em;
+}
+
+.modalMain img {
+  display: block;
+ margin-left: auto;
+ margin-right: auto;
+ margin-top: 20px;
+ margin-bottom: 20px;
+}
+
+#instagram {
+  width: 60px;
+height: 60px;
+}
+
+#youtube {
+  width: 132px;
+height: 30px;
+}
