--- a/css/modal.css
+++ b/css/modal.css
@@ -9,6 +9,8 @@
     cursor: pointer;
     display: block;
     text-align: center;
+    margin-top: 0.5%;
+    /* margin-bottom: 1px; */
 }
 
 .fas fa-bars fa-lg {
