--- a/css/map_style.css
+++ b/css/map_style.css
@@ -28,17 +28,75 @@ height: 95.5%;
     /* margin-top: 1%; */
 }
 
+/*以下なら*/
+/*@media screen and (max-width: 480px){
+    .content .bodyContent iframe{
+    width: 100%;
+    height: auto;
+}
+}*/
 
-@media screen and (max-width: 480px){
-    iframe{
-    width: 290px;
-    height: 170px;
+/*以上なら*/
+/*@media screen and (min-width: 480px){
+    .content .bodyContent iframe{
+    width: 100%;
+    height: auto;
 }
+}*/
+
+ .content .bodyContent iframe{
+    width: 100%;
+    height: auto;
 }
 
-@media screen and (min-width: 480px){
-    iframe{
-    width: 500px;
-    height: 280px;
-}
-}
+
+/*style the box*/  
+         .gm-style .gm-style-iw {
+            /*top: 0 !important;*/
+            /*left: 0 !important;*/
+            /*right: 0!important;*/
+            /*width: 100% !important;*/
+            /*height: 100% !important;*/
+            display: block !important;
+             min-width: 250px !important;
+         }    
+         
+     
+        
+        .gm-style div div div div div div div div {
+            padding: 0;
+            margin: 0;
+            padding: 0;
+            top: 0;
+        }
+        
+       
+        .gm-style div div div div div div div {
+           
+        }
+
+        .gm-style div div div div div  {
+           
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
